wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      targetPort: 80
      name: wp-svc
  selector:
    app: wordpress
    tier: frontend
  #type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
    role: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.8-php8.0-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wp-svc
        resources:
          limits:
            cpu: 750m
            memory: "750Mi"
          requests:
            memory: "100Mi"
            cpu: "120m"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
        - name: wordpress-custom
          mountPath: /usr/local/etc/php/conf.d/uploads.ini
          subPath: uploads.ini
        - name: wordpress-custom
          mountPath: /var/www/html/.htaccess
          subPath: .htaccess
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
        # only enable on GKE
          claimName: nfs
      - name: wordpress-custom
        configMap:
          name: wordpress-custom-options
          items:
          - key: ".htaccess"
            path: ".htaccess"
          - key: "uploads.ini"
            path: "uploads.ini"
